# at

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitconfig  .gitignore  .gitmessage  AGENTS.md  Cached.py  README.md  __init__.py  ashtakavarga.csv  ashtakavarga.py  backlog.md  chart.py  constants.py  cspell.json  generateAshtakavarga.py  getChart.py  helpers.py  main.py  output.py  plan.md  pyproject.toml  readConfig.py  readMe.md  requirements.txt  ruff.toml  sample.yml  setup.sh
.devcontainer/: config.env  devcontainer.json
.dvc/: config
.githooks/: post-checkout  post-merge  pre-commit  pre-push
.github/: copilot-instructions.md  copilot-mcp.json
ashtakavarga/: __init__.py
chart/: __init__.py
context/: dev-approach.md  execution.md  functional.md  readme.md  structural.md
core/: Cached.py  constants.py  dignity.py  helpers.py  karakas.py  planetQuality.py  planetaryPositions.py  riseAndSet.py  specialPositions.py  sweHelpers.py  varga.py
dasha/: __init__.py
data/: README.md  defaultConfig.yml  muhurtaYogaProvenance.csv  yogaWeightPolicy.yml
docs/: decisions.md  design.md  guide.md  muhurtaSources.md  notes.md  presets-cheatsheet.md  readme.md
examples/: composite.yml  config.yml  presetExtensions.yml
panchang/: __init__.py  getMuhurtaYoga.py  muhurtaYogaEffects.csv
presets/: allFieldSets.yml  amkADL.yml  amkDL.yml  biz.yml  bizUltra.yml  debug.yml  education.yml  eventBalas.yml  inFYStart.yml  inTNJambukeswarar.yml  launch.yml  marketing.yml  muhurta-base.yml  panchang.yml  peak.yml  scenarioSweep.yml  staffOnboarding.yml  (+5 more)
(+109 files in other folders)
